fix: fix data-sync source code compilation issues (partial)
Attempted fixes for data-sync service:
- Updated OpenSearchConfig to use Apache HttpClient 4 (opensearch-rest-client)
- Updated OpenSearchConfig to use JsonbJsonpMapper instead of ObjectMapper
- Fixed ESWriter to use Refresh enum instead of boolean
- Simplified ESWriter upsert to use index() instead of update()
- Added spring-boot-starter-web dependency for RestTemplate
- Added jakarta.json.bind-api for JSON-B support
- Added opensearch-rest-client dependency
- Fixed DataProcessor List.of() calls to use Arrays.asList (Java 8 compatible)
- Fixed DataSyncConfig KafkaProducer configuration

Remaining issues:
- Debezium 2.5 API incompatibility - Handler interface changes
- OpenSearchTransport import path changes
- These require further investigation of Debezium 2.x API changes

Note: Unit tests cannot run until main source compiles successfully.
The test files (VectorizationQueueTest, VectorizationTaskTest, etc.)
are correctly written but blocked by source compilation issues.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>